--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     	}
     },
     "require": {
-        "twig/twig": "^2.0"
+        "twig/twig": "^2.0",
+        "league/csv": "^9.4"
     }
 }
