--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     },
     "require": {
         "twig/twig": "^2.0",
-        "league/csv": "^9.4"
+        "league/csv": "^9.4",
+        "altorouter/altorouter": "^1.2"
     }
 }
